--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,6 +13,7 @@
         background: #666;
         color: #ccc;
         zoom: 150%;
+        transition: ease-in 0.2s;
       }
     </style>
   </head>
